--- a/Quack/templates/base.html
+++ b/Quack/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>insta485</title>
+        <title>Quack</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
     <body>
