--- a/Quack/templates/coding_questions.html
+++ b/Quack/templates/coding_questions.html
@@ -33,19 +33,27 @@
             height:7%;
             padding: 10px;
         }
+        .microphone{
+            position:relative;
+            margin-left: 5px;
+            float:right;
+        }
+        
+
 
 
 
     </style>
 </head>
 <body>
-    <div class = "big_box">
-        <p>chat will reply here</p>
-    </div>
-    <div class = "small_box">
-        <p>type your question here...</p>
-        <i style="font-size:24px" class="fa">&#xf130;</i>
 
-    </div>
+        <div class = "big_box">
+          <p>chat will reply here</p>
+     </div>
+        <div class = "small_box">
+            <p>type your question here...
+            <i style="font-size:24px" class="fa microphone">&#xf130;</i></p>
+        </div>
+   
 </body>
 </html>
