--- a/Quack/templates/loginPage.html
+++ b/Quack/templates/loginPage.html
@@ -13,7 +13,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #f7f7f7;
+            background-color: #ffecc1;
         }
 
         .login-container {
@@ -77,7 +77,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            Insta485
+            Sign in
         </div>
 
         <!-- Login Form -->
