loginpage and codeQuaker w navbar

--- a/Quack/templates/navbar.html
+++ b/Quack/templates/navbar.html
@@ -40,7 +40,7 @@
       <div class = "container-fluid px-3">
         <a id = "head" class = "navText navbar-brand" aria-current="page" href="./index.html">
           <img class = "logo" src = "../static/images/logo.png" width = "60" height = "60" />
-          <a>quack!</a>
+          <a style = "text-decoration: none; color: black" href="./index.html">quack!</a>
         </a>
         <button id = "toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class = "navbar-toggler-icon"> </span>
