--- a/Quack/templates/CodeQuacker.html
+++ b/Quack/templates/CodeQuacker.html
@@ -5,55 +5,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Login - Insta485</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
+        }
+
+        .big_box {
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #ffecc1;
-        }
-
-        .big_box{
+            min-height: 70vh;
+            margin-right: 50px;
+            margin-top: 50px;
+            margin-left: 50px;
             background-color: white;
-            display:absolute;
-            height: 60%;
-            width: 80%;
-            padding: 10px;
+            padding: 20px;
         }
 
-        .small_box{
+        .small_box {
+            height: auto;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+            flex-direction: column;
+            margin-right: 50px;
+            margin-bottom: 50px;
+            margin-left: 50px;
             background-color: rgb(149, 149, 149);
-            position: relative;
-            margin-top:0px;
-            width:80%;
-            height:7%;
-            padding: 10px;
+            height: auto;
+            color: black;
+            align-items: center;
         }
+
+        .small_box i {
+            font-size: 24px;
+            cursor: pointer;
+            float: left;
+        }
+        
         .microphone{
-            position:relative;
+            /* position:relative; */
             margin-left: 5px;
             float:right;
         }
         
+        .navbar {
+            background-color: #F8D586;
+        }
 
+        li {
+            margin-right: 30px;
+        }
 
+        .login {
+            color: #000;               /* Darker text color for contrast */
+            text-align: center;
+        }
 
-
+        .login a {
+            color: #000;               /* Ensures the link text is black */
+            text-decoration: none;     /* Removes underline from link */
+        }
     </style>
+    
 </head>
-<body>
+<body style = "background-color: #FFF0CE;">
 
-        <div class = "big_box">
-          <p>chat will reply here</p>
-     </div>
-        <div class = "small_box">
-            <p>type your question here...
-            <i style="font-size:24px" class="fa microphone">&#xf130;</i></p>
+  <!-- NavBar -->
+  <section id="navbar">
+    <nav class = "navbar navbar-expand-md">
+      <div class = "container-fluid px-3">
+        <a id = "head" class = "navText navbar-brand" aria-current="page" href="./index.html">
+          <img class = "logo" src = "../static/images/logo.png" width = "60" height = "60" />
+          <a style = "text-decoration: none; color: black" href="./index.html">quack!</a>
+        </a>
+        <button id = "toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class = "navbar-toggler-icon"> </span>
+        </button>
+        
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link align-content-center" href="../Locked Page/lockPage.html">lessons</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link align-content-center" href="#">notes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link align-content-center" href="./CodeQuacker.html">CodeQuacker</a>
+            </li>
+            <li class = "login card container-fluid" style="background-color: #FFF0CE">
+              <a class="nav-link align-content-center" href="./loginPage.html" >log in</a>
+            </li>
+          </ul>
         </div>
+      </div>
+    </nav>
+  <!--NavBar End-->
+
+  <section id="main">
+    <div class="card big_box">
+      <div class="card-body">
+        Generating answer...
+      </div>
+    </div>
+    <div class="card small_box">
+      <span>Type your question here...</span>
+      <i class="fa fa-microphone microphone"></i>
+    </div>
+  </section>
    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+      
 </body>
 </html>
