--- a/Quack/templates/createAccount.html
+++ b/Quack/templates/createAccount.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Insta485</title>
+    <title>Create Account - Insta485</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,7 +16,7 @@
             background-color: #ffecc1;
         }
 
-        .login-container {
+        .signup-container {
             text-align: center;
             background-color: white;
             padding: 20px;
@@ -30,13 +30,14 @@
             margin-bottom: 20px;
         }
 
-        .login-form {
+        .signup-form {
             display: flex;
             flex-direction: column;
         }
 
-        .login-form input[type="text"],
-        .login-form input[type="password"] {
+        .signup-form input[type="text"],
+        .signup-form input[type="email"],
+        .signup-form input[type="password"] {
             width: 250px;
             margin: 10px 0;
             padding: 10px;
@@ -45,7 +46,7 @@
             border-radius: 5px;
         }
 
-        .login-form input[type="submit"] {
+        .signup-form input[type="submit"] {
             padding: 10px;
             background-color: #3897f0;
             color: white;
@@ -55,42 +56,43 @@
             font-size: 16px;
         }
 
-        .login-form input[type="submit"]:hover {
+        .signup-form input[type="submit"]:hover {
             background-color: #1c6ea4;
         }
 
-        .signup-link {
+        .login-link {
             margin-top: 20px;
             font-size: 14px;
         }
 
-        .signup-link a {
+        .login-link a {
             color: #3897f0;
             text-decoration: none;
         }
 
-        .signup-link a:hover {
+        .login-link a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="login-container">
+    <div class="signup-container">
         <div class="logo">
-            Sign in
+            Create an Account
         </div>
 
-        <!-- Login Form -->
-        <form action="/accounts/?target=/" method="post" enctype="multipart/form-data" class="login-form">
+        <!-- Sign-up Form -->
+        <form action="/accounts/create/" method="post" enctype="multipart/form-data" class="signup-form">
             <input type="text" name="username" placeholder="Username" required/>
+            <input type="email" name="email" placeholder="Email" required/>
             <input type="password" name="password" placeholder="Password" required/>
-            <input type="submit" value="login"/>
-            <input type="hidden" name="operation" value="login"/>
+            <input type="submit" value="Sign Up"/>
+            <input type="hidden" name="operation" value="create"/>
         </form>
 
-        <!-- Sign-up link -->
-        <div class="signup-link">
-            Don't have an account? <a href="createAccount.html">Sign up</a>
+        <!-- Login link -->
+        <div class="login-link">
+            Already have an account? <a href="loginPage.html">Log in</a>
         </div>
     </div>
 </body>
